<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!--Launch-->
    <string name="launch_welcome">Welcome to Political Preparedness!</string>
    <string name="launch_upcoming_elections_title">Upcoming Elections</string>
    <string name="launch_find_representatives_title">Find my Representatives</string>

    <!--Elections-->
    <string name="elections_upcoming_elections_title">Upcoming Elections</string>
    <string name="elections_saved_elections_title">Saved Elections</string>
    <string name="elections_click_for_details">Click for election details</string>
    <string name="elections_no_data_placeholder">No upcoming elections found…\n\nPress to reload!</string>
    <string name="elections_no_saved_placeholder">No saved elections…\n\nYou can save upcoming elections in the election detail.</string>
    <string name="elections_error_fetch_election">Could not load the upcoming elections. Please check your internet connection and try again!</string>

    <!--VoterInfo-->
    <string name="voterInfo_no_data_placeholder">No additional information found…\n\nPress to reload!</string>
    <string name="voterInfo_delete">Remove from saved elections</string>
    <string name="voterInfo_save">Add to saved elections</string>
    <string name="voterInfo_error_fetch_data">Could not load additional information. Please check your internet connection and try again!</string>
    <string name="voterInfo_save_success">Successfully saved!</string>
    <string name="voterInfo_remove_success">Successfully removed!</string>
    <string name="voterInfo_save_error">Could not save the election. Please try again!</string>
    <string name="voterInfo_remove_error">Could not remove the election. Please try again!</string>
    <string name="voterInfo_election_information_title">Election Information</string>
    <string name="voterInfo_voting_locations"><u>Voting Locations</u></string>
    <string name="voterInfo_ballot_information"><u>Ballot Information</u></string>
    <string name="voterInfo_address_title">Correspondence Address</string>

    <!--Representatives-->
    <string name="representatives_permission_denied_explanation">You need to grant location permission in order to select the location</string>
    <string name="representatives_search_title">Representative Search</string>
    <string name="representatives_line1_hint">Address Line 1</string>
    <string name="representatives_line2_hint">Address Line 2</string>
    <string name="representatives_city_hint">City</string>
    <string name="representatives_zip_hint">Zip</string>
    <string name="representatives_list_title">My Representatives</string>
    <string name="representatives_button_search_title">Find my Representatives</string>
    <string name="representatives_button_location_title">Use my location</string>
    <string name="representatives_list_placeholder">No Data…\n\nPress \"FIND MY REPRESENTATIVES\" to start!</string>
    <string name="representatives_error_fetch">Could not load your representatives. Please check your internet connection and try again!</string>
    <string name="representatives_error_not_found">Could not find any representatives to your selected location!</string>
    <string name="representative_expand">Expand</string>
    <string name="representative_reset_search">Reset search</string>
    <string name="representative_photo">Representative Photo</string>
    <string name="representative_website">Website</string>
    <string name="representative_facebook">Facebook Link</string>
    <string name="representative_twitter">Twitter Link</string>

</resources>
