<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_normal"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ballot_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvWelcome"
            style="@style/Text20.Bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/launch_welcome"
            app:layout_constraintBottom_toTopOf="@+id/upcomingButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/upcomingButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_upcoming_elections_title"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintBottom_toTopOf="@+id/representativeButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/representativeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/launch_find_representatives_title"
            style="@style/Widget.AppCompat.Button.Colored"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>