<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.ElectionsViewModel" />
        <import type="android.view.View"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_normal"
        tools:context="com.example.android.politicalpreparedness.MainActivity">

        <TextView
            android:id="@+id/tvUpcomingElections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text20.Bold"
            android:text="@string/elections_upcoming_elections_title"
            android:drawablePadding="@dimen/margin_small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:drawableStartCompat="@drawable/ic_upcoming" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRemoteElections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="@dimen/margin_medium"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingElections" />

        <TextView
            android:id="@+id/noDataPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text20"
            android:textAlignment="center"
            android:text="@string/elections_no_data_placeholder"
            android:visibility="@{!viewModel.loading &amp;&amp; viewModel.upcomingElections.size() == 0 ? View.VISIBLE : View.GONE}"
            android:onClick="@{() -> viewModel.refreshUpcomingElections()}"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingElections"/>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toTopOf="@+id/guidelineMiddle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUpcomingElections" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineMiddle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <TextView
            android:id="@+id/tvSavedElections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/Text20.Bold"
            android:text="@string/elections_saved_elections_title"
            android:drawablePadding="@dimen/margin_small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineMiddle"
            app:drawableStartCompat="@drawable/ic_save"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSavedElections"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSavedElections"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <TextView
            android:id="@+id/noSavedPlaceholder"
            style="@style/Text20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/elections_no_saved_placeholder"
            android:textAlignment="center"
            android:visibility="@{!viewModel.loading &amp;&amp; viewModel.savedElections.size() == 0 ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/guidelineMiddle" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>